[gd_scene load_steps=16 format=2]

[ext_resource path="res://Fonts/PTSerif-Italic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scene/ASchermo/Achivement.gd" type="Script" id=2]
[ext_resource path="res://Immagini/Oggetti/SpuntaVerde.png" type="Texture" id=3]
[ext_resource path="res://Audio/coin_pickup.wav" type="AudioStream" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0705882, 0.054902, 0.054902, 0.976471 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=5]
size = 55
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=18]
size = 55
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 55
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=19]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=22]
resource_name = "CoinC"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/CoinCollector:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel/SpuntaVerde:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("Pickup")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.4 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel/SpuntaVerde:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=24]
resource_name = "CoinF"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/CoinRecycler:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel/SpuntaVerde2:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("Pickup")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.4 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel/SpuntaVerde2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=25]
resource_name = "CoinS"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/CoinSpeedrunner:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("Pickup")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.4 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel/SpuntaVerde3:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel/SpuntaVerde3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=27]
resource_name = "flashingEsc"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ), Color( 0.0235294, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "pannelAppearing"
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="DynamicFont" id=26]
size = 35
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Achivement" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_scale = Vector2( 1.8, 1.8 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = -138.889
margin_right = 825.0
margin_bottom = 361.111
rect_min_size = Vector2( 1100, 500 )
rect_scale = Vector2( 0.1, 0.1 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Speedrunner" type="Label" parent="Panel"]
margin_left = 99.0
margin_top = 355.0
margin_right = 490.0
margin_bottom = 429.0
custom_fonts/font = SubResource( 5 )
text = "Speedrunner"
align = 1

[node name="TimePassed" type="Label" parent="Panel"]
margin_left = 490.0
margin_top = 355.0
margin_right = 989.0
margin_bottom = 429.0
custom_fonts/font = SubResource( 18 )
text = "##:##:## < ##:##:##"
align = 1

[node name="Collector" type="Label" parent="Panel"]
margin_left = 100.0
margin_top = 211.111
margin_right = 491.0
margin_bottom = 285.111
custom_fonts/font = SubResource( 5 )
text = "Collector"
align = 1

[node name="EnemyDestroy" type="Label" parent="Panel"]
margin_left = 488.889
margin_top = 72.222
margin_right = 983.889
margin_bottom = 146.222
custom_fonts/font = SubResource( 6 )
text = "#/#"
align = 1

[node name="Recycler" type="Label" parent="Panel"]
margin_left = 100.0
margin_top = 72.2222
margin_right = 491.0
margin_bottom = 146.222
custom_fonts/font = SubResource( 5 )
text = "Recycler"
align = 1

[node name="PageFound" type="Label" parent="Panel"]
margin_left = 491.111
margin_top = 211.111
margin_right = 986.111
margin_bottom = 285.111
custom_fonts/font = SubResource( 6 )
text = "#/#"
align = 1

[node name="CoinCollector" type="Label" parent="Panel"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 74.7778
margin_right = 99.0
margin_bottom = 149.778
custom_colors/font_color = Color( 1, 0.701961, 0, 1 )
custom_fonts/font = SubResource( 19 )
text = "+##"

[node name="CoinRecycler" type="Label" parent="Panel"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 212.556
margin_right = 99.0
margin_bottom = 287.556
custom_colors/font_color = Color( 1, 0.701961, 0, 1 )
custom_fonts/font = SubResource( 19 )
text = "+##"

[node name="CoinSpeedrunner" type="Label" parent="Panel"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 354.778
margin_right = 99.0
margin_bottom = 429.778
custom_colors/font_color = Color( 1, 0.701961, 0, 1 )
custom_fonts/font = SubResource( 19 )
text = "+##"

[node name="SpuntaVerde" type="Sprite" parent="Panel"]
visible = false
position = Vector2( 460, 75 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 3 )

[node name="SpuntaVerde2" type="Sprite" parent="Panel"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 460, 192.222 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 3 )

[node name="SpuntaVerde3" type="Sprite" parent="Panel"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 460, 355 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4096.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/CoinC = SubResource( 22 )
anims/CoinF = SubResource( 24 )
anims/CoinS = SubResource( 25 )
anims/flashingEsc = SubResource( 27 )
anims/pannelAppearing = SubResource( 23 )

[node name="Label" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 81.6667
margin_top = 100.556
margin_right = 281.667
margin_bottom = 157.556
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 26 )
text = "press esc"

[node name="Pickup" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
max_distance = 1e+07
